--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pour-Koko mint",
+  "name": "PourKoko",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,7 +24,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "node ./scripts/comment.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
